# meetingly-web

./: .pre-commit-config.yaml  .secrets.baseline  API_DOCUMENTATION.md  ARCHITECTURE_DECISIONS.md  CONTINUITY_REVIEW_REPORT.md  ERROR_HANDLING_GUIDE.md  PROJECT_STRUCTURE.md  RAILWAY_DEPLOYMENT.md  README_WEB.md  SETUP_GUIDE.md  deploy-railway.sh  monitoring.md  nixpacks.toml  railway.json  setup-dev.sh  verify-setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy-production.yml
.kiro/specs/web-app-railway-migration/: design.md  requirements.md  tasks.md
.railway/: railway.env.template
api/: Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  run_tests.sh  setup.cfg
api/app/: __init__.py
api/app/api/: versioning.py
api/app/api/routes/: audio.py  auth.py  config.py  files.py  meetings.py  migration.py  websocket.py
api/app/api/routes/v1/: __init__.py  audio.py  meetings.py
api/app/core/: config.py  database.py  monitoring.py  retry.py
api/app/middleware/: auth.py  error_handling.py  rate_limit.py  security.py  versioning.py
api/app/migration/: __init__.py  desktop_migrator.py
api/app/services/: audio.py  auth.py  config.py  enhanced_summary.py  file_manager.py  file_storage.py  meeting.py  monitoring.py  session.py  summary.py  websocket.py  whisper.py
api/docs/: API_MIGRATION_GUIDE.md  API_VERSIONING_STRATEGY.md
api/migrations/: env.py
api/migrations/versions/: 001_initial_schema.py
api/schema/: create_database.sql
api/scripts/: db_utils.py  init_db.py  migrate_desktop_data.py
api/tests/: conftest.py
api/tests/api/: test_api_compatibility.py  test_auth_endpoints.py
api/tests/e2e/: test_user_workflows.py
api/tests/middleware/: test_auth.py  test_rate_limit.py  test_security.py
backend/: DEPRECATED_README.md  requirements.txt
backend/whisper-custom/server/: server.cpp
docs/: azure-ad-setup.md  azure-sso-setup.md
frontend/: tsconfig.json
frontend/src-tauri/src/audio/: stt.rs
frontend/src/config/: api.ts
scripts/: architecture-compliance.js  monitor-health.sh  validate-azure-config.py
shared-types/: README.md  package.json  tsconfig.json
shared-types/src/: api.ts  audio.ts  auth.ts  common.ts  errors.ts  index.ts  meetings.ts  summary.ts  websocket.ts
web-app/: .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  jest.config.js  jest.env.js  jest.integration.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  railway.toml  tailwind.config.js  tsconfig.json
web-app/src/app/: layout.tsx  page.tsx
web-app/src/app/login/: page.tsx
web-app/src/components/: ExportModal.tsx  OfflineStatus.tsx  UploadModal.tsx  UserProfile.tsx
web-app/src/config/: api.ts  app.ts  auth.ts  index.ts
web-app/src/hooks/: index.ts  useAudioUpload.ts  useAuth.ts  useLocalStorage.ts  useMeetings.ts  useRetry.ts  useWebSocket.ts
web-app/src/lib/: api.ts  auth.ts  axiosInterceptor.ts  errorHandling.ts  offline.ts  performance.ts  retry.ts  utils.ts  validation.ts
web-app/src/services/: audioService.ts  authService.ts  exportService.ts  index.ts  meetingService.ts  notificationService.ts  summaryService.ts  websocket.ts
web-app/src/store/: authStore.ts  index.ts  meetingStore.ts  uiStore.ts
web-app/src/types/: index.ts
web-app/tests/e2e/: auth.e2e.test.ts  global-setup.ts  global-teardown.ts  meeting-workflow.e2e.test.ts
web-app/tests/integration/: api-contract.test.ts  auth.integration.test.ts  offline.integration.test.ts  websocket.integration.test.ts
(+31 files in other folders)
